--- a/datasets/readme
+++ b/datasets/readme
@@ -1,2 +1,2 @@
-Download datasets and extract zip file from this url:
+Download datasets and extract zip files from this url:
 https://drive.google.com/drive/folders/142VwYrnZvx72z-cdjSiHpydz3YMzUIyi?usp=sharing
